--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Very First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/assignment-1.css">
 </head>
-<body>
-    
+<body class="work-sans-fira">
+    <header>
+        <div class="bd">
+            <h3 class="bd2">Bangladesh 2.0</h3>
+            <button class="sign-in">Sign In</button>
+        </div>
+        <div class="banner-bd">
+            <div class="banner-text">
+                <p class="banner-subtitle">Bangladesh 2.0</p>
+                <h1 class="banner-title">Idea , innovation , <br>
+                    vision and challenges in <br> New Bangladesh.</h1>
+                <button class="explore-bd">Explore New Bangladesh</button>
+            </div>
+            <div class="banner-img"><img src="assets/hero.png" alt=""></div>
+        </div>
+    </header>
+    <main>
+        <section class="vision">
+            <div class="vision-title-div">
+                <h2 class="vision-title">The Vision of Future</h2>
+                <p class="vision-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
