--- a/index.html
+++ b/index.html
@@ -26,10 +26,38 @@
         </div>
     </header>
     <main>
+        <div class="pillars-of-bd">
+            <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillar-cards">
+                <div class="cards-cls">
+                    <img src="assets/card-icon.png" alt="" class="card-icon">
+                    <h4 class="card-title">Innovation</h4>
+                    <p class="card-subtitle">Bangladesh, a rising economic powerhouse, is experiencing dynamic growth across multiple sectors.</p>
+                </div>
+                <div class="cards-cls">
+                    <img src="assets/sustainable.png" alt="" class="card-icon">
+                    <h4 class="card-title">Sustainability</h4>
+                    <p class="card-subtitle">Bangladesh is working to achieve sustainable development, but it faces many challenges</p>
+                </div>
+                <div class="cards-cls">
+                    <img src="assets/infrastructure.png" alt="" class="card-icon">
+                    <h4 class="card-title">Infrastructure</h4>
+                    <p class="card-subtitle">Bangladesh has been developing its infrastructure to improve the country's economy and create jobs.</p>   
+                </div>
+                <div class="cards-cls">
+                    <img src="assets/empowerment-png.png" alt="" class="card-icon">
+                    <h4 class="card-title">Empowerment</h4>
+                    <p class="card-subtitle">Women are now more capable of starting their own businesses, obtaining stable employment, and boosting the national economy.</p>
+            </div>
+        </div>
         <section class="vision">
             <div class="vision-title-div">
                 <h2 class="vision-title">The Vision of Future</h2>
                 <p class="vision-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="vision-cards">
+                
+                </div>
             </div>
         </section>
     </main>
