vision section commit

--- a/index.html
+++ b/index.html
@@ -56,10 +56,33 @@
                 <p class="vision-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             </div>
             <div class="vision-cards">
-                
+                <div class="card-no-1 common-card">
+                    <img src="assets/digital-transformation.png" alt="" class="v-card">
+                    <h4 class="v-title">Digital Transformation</h4>
+                    <p class="v-subtitle">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="v-btn-1 btn-primary">Learn More</button>
+                </div>
+                <div class="card-no-2 common-card">
+                    <img src="assets/green-energy-icon.png" alt="" class="v-card">
+                    <h4 class="v-title">Green Energy</h4>
+                    <p class="v-subtitle">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="v-btn-2 btn-primary">Learn More</button>
+                </div>
+                <div class="card-no-3 common-card">
+                    <img src="assets/infrastructure.png" alt="" class="v-card">
+                    <h4 class="v-title">Modern Infrastructure</h4>
+                    <p class="v-subtitle">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="v-btn-3 btn-primary">Learn More</button>
+                </div>
                 </div>
             </div>
+            <div class="qoute">
+                <p class="info-title">The students had decided that what they needed was for Prof Yunus "an 84-year-old Nobel laureate" to step into the power vacuum left by the sudden resignation of Prime Minister Sheikh Hasina and lead the new interim government. He accepted immediately. Most pressing, he says, is the security situation.</p>
+                <h4 class="name">Dr. Muhammad Yunus</h4>
+                <p class="sub-name">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>        
         </section>
+        
     </main>
     <footer>
 
