task-3 third innovation added

--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                 </div>
                 <div class="metro-img"><img src="assets/dhaka_metro.jpg" alt="" class="innovation-img"></div>
             </div>
+            <div class="innovation-3">
+                <div class="inn-card-1">
+                <img src="assets/bd-submarine-2.png" alt="" class="innovation-img">
+            
+            </div>
+            <div class="inn-card-2">
+                <h3 class="news-title">Bangladesh Launches New Satellite</h3>
+            <img src="assets/al-jazeera.png" alt="" class="aljazzera">
+            <p class="news-subtitle">Date: 12/03/2017    Time: 10.25 AM</p>
+            <p class="news-subtitle">Bangladesh's first two submarines were commissioned on March 12, 2017, at a ceremony in Chittagong Naval Berth. The submarines, named "Nabajatra" and "Joyjatra", were procured from China. The Bangladesh Navy is also constructing a new base, BNS Sher-e-Bangla, in Rabanabad, Patuakhali
+            </p>
+            <button class="btn-sec">Read More</button>
+            </div>
+            </div>
+            
         </section>
     </main>
     <footer>
